<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundGrey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--facebook and google login button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:orientation="vertical">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/btn_sign_in_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="15dp" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btn_sign_in_google"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp" />
            </LinearLayout>

            <!--OR seperator-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/tv_login_or_seperator"
                    android:layout_weight="2"
                    android:background="@color/color_login_divider" />

                <TextView
                    android:id="@+id/tv_login_or_seperator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:text="@string/or"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_toStartOf="@+id/tv_login_or_seperator"
                    android:background="@color/color_login_divider" />
            </RelativeLayout>


            <!--Email form container-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingTop="20dp">

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:hint="@string/email_address"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_email"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:hint="@string/password"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_login_forget_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_password"
                    android:layout_alignParentEnd="true"
                    android:text="@string/forget_password"
                    android:textAlignment="textEnd"
                    android:textColor="@color/color_text_dark_grey" />

                <Button
                    android:id="@+id/btn_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_login_forget_pass"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_login_email"
                    android:layout_marginTop="10dp"
                    android:text="@string/don_t_have_an_account_yet_sign_up_now"
                    android:textAlignment="center"
                    android:textColor="@color/color_text_dark_grey"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</layout>