<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_showcase_detailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_toolbar_showcase_detailed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Placeholder"
                android:textAlignment="center"
                android:textColor="@color/color_text_white"
                android:textSize="18sp" />
        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/frame_showcase_detailed_header"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_showcase_detailed"></FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_showcase_detailed_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_showcase_detailed"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder_hd" />

                <TextView
                    android:id="@+id/tv_showcase_detailed_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Title Placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/color_text_white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/color_divider" />

                <com.borjabravo.readmoretextview.ReadMoreTextView
                    android:id="@+id/tv_showcase_detailed_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="16dp"
                    app:colorClickableText="@color/color_text_white"
                    app:trimCollapsedText="@string/loremIpsum1p"
                    app:trimLength="3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/termsAndCondition"
                    android:textColor="@color/color_text_white"
                    android:textSize="18sp" />

                <com.borjabravo.readmoretextview.ReadMoreTextView
                    android:id="@+id/tv_showcase_detailed_terms_condition_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="16dp"
                    app:colorClickableText="@color/color_text_white"
                    app:trimCollapsedText="@string/loremIpsum1p"
                    app:trimLength="4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/validDate"
                    android:textColor="@color/color_text_white"
                    android:textSize="18sp" />

                <com.borjabravo.readmoretextview.ReadMoreTextView
                    android:id="@+id/tv_showcase_detailed_valid_date_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="16dp"
                    app:colorClickableText="@color/color_text_white"
                    app:trimCollapsedText="@string/loremIpsum1p"
                    app:trimLength="4" />

            </LinearLayout>

        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</layout>
